style: fix alignment of songs

--- a/src/ui/root/music/music.module.css
+++ b/src/ui/root/music/music.module.css
@@ -8,6 +8,10 @@
 }
 
 .section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   width: calc(50% - 5px);
 }
 
